syntax = "proto3";

package p2p;

option go_package = "./pkg/p2p/pb";

message ListRequest {}
message ListResponse {
    repeated string addresses = 1;
}

message ConnectRequest {
    string address = 1;
}

message ConnectResponse {
    string address = 1;
}

message DisconnectRequest {
    string address = 1;
}

message DisconnectResponse {
    string address = 1;
}

message GetRequest {
    string address = 1;
    string word = 2;
}

message GetResponse {
    repeated string sentences = 1;
}

service P2P {
    rpc Connect(ConnectRequest) returns (ConnectResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Disconnect(DisconnectRequest) returns (DisconnectResponse);
    rpc Get(GetRequest) returns (GetResponse);
}